View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028982 | Community | OCCT:Modeling Algorithms | public | 2017-08-08 09:12 | 2018-06-29 21:19 |
Reporter | ickby | Assigned To | bugmaster | ||
Priority | normal | Severity | major | ||
Status | closed | Resolution | fixed | ||
Platform | PC | OS | Windows | ||
Product Version | 7.1.0 | ||||
Target Version | 7.3.0 | Fixed in Version | 7.3.0 | ||
Summary | 0028982: 2D offset creates faulty result from wire | ||||
Description | The given ellipse creates a faulty shape when used in a 2d offset operation. It seems valid when checked with "checkshape" but it can be detected with bopcheck command. When th eoffset is used in further operations the created geometry is invalid: https://forum.freecadweb.org/viewtopic.php?f=3&t=17448&p=137535#p137503 This was reproduced with OCC 7.2beta. | ||||
Steps To Reproduce | pload ALL restore ellipse.brep mkoffset r ellipse 1 1 checkshape r_1 #valid bopcheck r_1 #gives errors | ||||
Tags | No tags attached. | ||||
Test case number | bugs modalg_7 bug28982 | ||||
|
ellipse.brep (2,247 bytes) |
|
The result of the offset operation seems to be valid. The problem is on the bopcheck side. The exception is raised during the check of the result r_1 with bopcheck command. I will analyze the issue when I have time. |
|
Branch CR28982 has been created by emv. SHA-1: 435f2bf630eb3418511d999bff3e3b1cf1852aec Detailed log of new commits: Author: emv Date: Tue Aug 8 11:20:57 2017 +0300 0028982: 2D offset creates faulty result from wire Protection of the Edge/Edge intersection algorithm (IntTools_EdgeEdge) from incomplete type conversion due to presence of the Trimmed curves by using Adaptors for getting typed curves instead of direct casting. Test case for the issue. |
|
Branch CR28982 has been updated forcibly by emv. SHA-1: ac0d2fbe6c51ebbf84664ccd5ff370761fa94ff5 |
|
Dear Nikolay, could you please review the patch? Test results are available here - http://jenkins-test-10.nnov.opencascade.com:8080/view/CR28982-master-EMV/view/COMPARE/ |
|
Reviewed. |
|
Combination - OCCT branch : CR28982 : SHA-1: ac0d2fbe6c51ebbf84664ccd5ff370761fa94ff5 Products branch : master was compiled on Linux, MacOS and Windows platforms and tested on optimize mode. http://jenkins-test-10.nnov.opencascade.com/view/CR28982-master-EMV/view/START%20BRANCH%20CERTIFICATION/ Number of compiler warnings: OCCT : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) Products : Linux: 5 (5 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) Regressions/Differences/Improvements: No regressions/differences CPU differences: No differences that require special attention Image differences : No differences that require special attention Memory differences : No differences that require special attention New test cases: OK http://occt-tests/CR28982-master-EMV-OCCT/Windows-64-VC10/bugs/modalg_7/bug28982.html http://occt-tests/CR28982-master-EMV-OCCT/Debian70-64/bugs/modalg_7/bug28982.html |
|
Branch CR28982 has been deleted by kgv. SHA-1: ac0d2fbe6c51ebbf84664ccd5ff370761fa94ff5 |
occt: master a318d719 2017-08-08 08:20:57 Committer: bugmaster Details Diff |
0028982: 2D offset creates faulty result from wire Protection of the Edge/Edge intersection algorithm (IntTools_EdgeEdge) from incomplete type conversion due to presence of the Trimmed curves by using Adaptors for getting typed curves instead of direct casting. Test case for the issue. |
Affected Issues 0028982 |
|
mod - src/IntTools/IntTools_EdgeEdge.cxx | Diff File | ||
add - tests/bugs/modalg_7/bug28982 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-08-08 09:12 | ickby | New Issue | |
2017-08-08 09:12 | ickby | Assigned To | => msv |
2017-08-08 09:12 | ickby | File Added: ellipse.brep | |
2017-08-08 10:55 | emv | Assigned To | msv => emv |
2017-08-08 10:58 | emv | Note Added: 0069194 | |
2017-08-08 10:58 | emv | Status | new => assigned |
2017-08-08 15:50 | git | Note Added: 0069210 | |
2017-08-09 07:43 | git | Note Added: 0069229 | |
2017-08-09 13:34 | emv | Note Added: 0069241 | |
2017-08-09 13:34 | emv | Assigned To | emv => nbv |
2017-08-09 13:34 | emv | Status | assigned => resolved |
2017-08-09 15:05 |
|
Note Added: 0069248 | |
2017-08-09 15:05 |
|
Assigned To | nbv => bugmaster |
2017-08-09 15:05 |
|
Status | resolved => reviewed |
2017-08-10 10:41 | bugmaster | Note Added: 0069269 | |
2017-08-10 10:41 | bugmaster | Status | reviewed => tested |
2017-08-10 10:41 | bugmaster | Test case number | => bugs modalg_7 bug28982 |
2017-08-10 10:42 | bugmaster | Note Edited: 0069269 | |
2017-08-11 07:52 | bugmaster | Changeset attached | => occt master a318d719 |
2017-08-11 07:52 | bugmaster | Status | tested => verified |
2017-08-11 07:52 | bugmaster | Resolution | open => fixed |
2017-08-18 17:00 | git | Note Added: 0069655 | |
2018-02-19 10:33 | abv | Target Version | => 7.4.0 |
2018-02-20 12:58 |
|
Target Version | 7.4.0 => 7.3.0 |
2018-06-29 21:15 |
|
Fixed in Version | => 7.3.0 |
2018-06-29 21:19 |
|
Status | verified => closed |